# rss

./: .gitignore  LICENCE  pyproject.toml
.github/: README.md
feedAggregator/: __main__.py  sections.part.html  template.py
service/: __main__.py  part_parse.py  sections.part.html  template.py
websrc/: .gitignore
