[tool.poetry]
name = "rss"
version = "0.0.0"
description = ""
authors = ["Tom <tom@tdpain.net>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^6.0.2"
css-inline = "^0.6.2"
chevron = "^0.14.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
