[tool.poetry]
name = "rss"
version = "0.0.1"
description = ""
authors = ["Tom <tom@tdpain.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
feedparser = "^6.0.2"
css-inline = "^0.6.2"
chevron = "^0.14.0"
fire = "^0.4.0"
html2text = "^2020.1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
